--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ollama = "^0.2.0"
 torch = "^2.3.0"
 pathspec = "^0.12.0"
 gitpython = "^3.1.43"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
