fix: Resolve AsyncIO event loop concurrency issues
- Fix 'Task got Future attached to different loop' errors in indexing tools
- Add async generator compatibility utilities in async_fix.py
- Implement proper async context management for concurrent operations
- Ensure stable async/await patterns throughout indexing pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,46 @@ chunking_metrics.json
 .DS_Store
 trees/
 logs/
+
+# Claude Flow generated files
+.claude/settings.local.json
+.mcp.json
+claude-flow.config.json
+.swarm/
+.hive-mind/
+memory/claude-flow-data.json
+memory/sessions/*
+!memory/sessions/README.md
+memory/agents/*
+!memory/agents/README.md
+coordination/memory_bank/*
+coordination/subtasks/*
+coordination/orchestration/*
+*.db
+*.db-journal
+*.db-wal
+*.sqlite
+*.sqlite-journal
+*.sqlite-wal
+claude-flow
+claude-flow.bat
+claude-flow.ps1
+hive-mind-prompt-*.txt
+
+# Phase 1 completion reports (temporary files)
+*PHASE1*.md
+*COMPLETION*.md  
+*QA_VALIDATION*.md
+*DEPENDENCY_UPDATE*.md
+*RUNTIME_RELIABILITY*.md
+phase1_*.md
+validate_runtime_fixes.py
+
+# Additional backup patterns
+*.backup
+*.bak
+*.orig
+
+# Temporary development files
+.roo/
+.roomodes
