--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,16 @@ description = "A RAG MCP server for codebase understanding."
 authors = [{ name = "Agentic-RAG" }]
 requires-python = "~=3.10"
 dependencies = [
-    "fastapi>=0.111.0,<0.112",
+    "fastapi>=0.116.1,<0.117",
     "uvicorn[standard]>=0.29.0,<0.30",
     "qdrant-client>=1.9.0,<2",
-    "ollama>=0.2.0,<0.3",
+    "ollama>=0.5.1,<0.6",
     "torch>=2.3.0,<3",
     "pathspec>=0.12.0,<0.13",
     "gitpython>=3.1.43,<4",
     "python-dotenv>=1.0.0,<2",
     "mcp[cli]>=1.9.4,<2",
-    "numpy<2.0",
+    "numpy>=2.0.0,<3.0",
     "psutil>=5.9.0,<6",
     "tree-sitter>=0.24.0,<0.25",
     "tree-sitter-python",
@@ -24,18 +24,18 @@ dependencies = [
     "tree-sitter-rust==0.21.2",
     "tree-sitter-java",
     "tree-sitter-cpp",
-    "redis>=5.0.0,<6",
-    "cryptography>=42.0.0,<43",
+    "redis>=6.2.0,<7",
+    "cryptography>=45.0.5,<46",
     "watchdog>=3.0.0,<4",
-    # OpenTelemetry dependencies for distributed tracing
-    "opentelemetry-api>=1.20.0,<2",
-    "opentelemetry-sdk>=1.20.0,<2",
-    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0,<2",
-    "opentelemetry-exporter-jaeger-thrift>=1.20.0,<2",
-    "opentelemetry-exporter-zipkin-json>=1.20.0,<2",
-    "opentelemetry-instrumentation-requests>=0.41b0,<1",
-    "opentelemetry-instrumentation-urllib3>=0.41b0,<1",
-    "opentelemetry-instrumentation-redis>=0.41b0,<1",
+    # OpenTelemetry dependencies for distributed tracing (Updated to latest stable)
+    "opentelemetry-api>=1.34.1,<2",
+    "opentelemetry-sdk>=1.34.1,<2",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.34.1,<2",
+    "opentelemetry-exporter-jaeger-thrift>=1.21.0,<2",
+    "opentelemetry-exporter-zipkin-json>=1.34.1,<2",
+    "opentelemetry-instrumentation-requests>=0.55b1,<1",
+    "opentelemetry-instrumentation-urllib3>=0.55b1,<1",
+    "opentelemetry-instrumentation-redis>=0.55b1,<1",
 ]
 
 [dependency-groups]
