--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,9 @@ package = false
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
 [tool.black]
 line-length = 140
 target-version = ['py310']
