--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -12,6 +12,7 @@ addopts =
     --cov-fail-under=90
     --asyncio-mode=auto
 testpaths = tests
+pythonpath = src
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
